--- a/McDonaldsWorkflow/McDonaldsWorkflow.csproj
+++ b/McDonaldsWorkflow/McDonaldsWorkflow.csproj
@@ -9,10 +9,11 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>McDonaldsWorkflow</RootNamespace>
     <AssemblyName>McDonaldsWorkflow</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WarningLevel>4</WarningLevel>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -69,12 +70,21 @@
   <ItemGroup>
     <Compile Include="Models\Cashier.cs" />
     <Compile Include="Models\Client.cs" />
+    <Compile Include="Models\Constants.cs" />
     <Compile Include="Models\Cook.cs" />
-    <Compile Include="Models\ICashier.cs" />
-    <Compile Include="Models\ICook.cs" />
+    <Compile Include="Models\Employee.cs" />
+    <Compile Include="Models\Interfaces\ICashier.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Models\Interfaces\ICompany.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Models\Interfaces\ICook.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Models\Manager.cs" />
     <Compile Include="Models\McDonalds.cs" />
-    <Compile Include="Models\MealsEnum.cs" />
+    <Compile Include="Models\MealTypes.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
