[McDuck] -Moved common functionality to Employee class from its children -Removed Cook and Cashier dependency from MCDonalds instance -Added IEmployee interface -Implemented EndOfDay method -Slight refactoring
NOTE: I did not check it, hope I didn't break anything.

--- a/McDonaldsWorkflow/McDonaldsWorkflow.csproj
+++ b/McDonaldsWorkflow/McDonaldsWorkflow.csproj
@@ -82,6 +82,9 @@
     <Compile Include="Models\Interfaces\ICook.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Models\Interfaces\IEmployee.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Models\Manager.cs" />
     <Compile Include="Models\McDonalds.cs" />
     <Compile Include="Models\MealTypes.cs" />
