Fixed some implementation and code was cleaned up

--- a/McDonaldsWorkflow/McDonaldsWorkflow.csproj
+++ b/McDonaldsWorkflow/McDonaldsWorkflow.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Models\Constants.cs" />
     <Compile Include="Models\Cook.cs" />
     <Compile Include="Models\Employee.cs" />
+    <Compile Include="Models\Enums\EmployeeStates.cs" />
     <Compile Include="Models\Interfaces\ICashier.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -82,12 +83,9 @@
     <Compile Include="Models\Interfaces\ICook.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Models\Interfaces\IEmployee.cs">
-      <SubType>Code</SubType>
-    </Compile>
     <Compile Include="Models\Manager.cs" />
     <Compile Include="Models\McDonalds.cs" />
-    <Compile Include="Models\MealTypes.cs" />
+    <Compile Include="Models\Enums\MealTypes.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
